fix for spacing between breadcrumbs on narrow screens
resolves #106

--- a/catsoop/__STATIC__/themes/base.css
+++ b/catsoop/__STATIC__/themes/base.css
@@ -168,6 +168,9 @@ header {
 span.line {
   display: inline-block;
 }
+span.line > a > p{
+  margin: 0px;
+}
 .cs_nav_wrapper {
 }
 
